[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["vadikam100500 <vadik.msk.100500@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.109.0"
uvicorn = "0.27.0"
pytest = "^8.0.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.1.1"
pep8-naming = "^0.13.3"
mypy = "^1.8.0"
isort = "^5.13.2"
pylint = "^3.0.3"
pytest-sugar = "^0.9.7"
pytest-clarity = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [".gitignore", ".dockerignore", '.venv']
line_length = 120
